Add image to shibubu.html

--- a/shibubu.html
+++ b/shibubu.html
@@ -4,6 +4,7 @@
   <title>SHIBUBU</title>
 </head>
 <body style="font-family:Arial;text-align:center;margin-top:100px;">
+  <img src="shibubu.png" width="120">
   <h1>SHIBUBU</h1>
   <h2>We don’t need smarter AI.<br>We need an AI society.</h2>
   <p>Coming soon.</p>
