--- a/shibubu.html
+++ b/shibubu.html
@@ -6,7 +6,22 @@
 <body style="font-family:Arial;text-align:center;margin-top:100px;">
   <img src="shibubu.png" width="120">
   <h1>SHIBUBU</h1>
+ 
   <h2>We don’t need smarter AI.<br>We need an AI society.</h2>
   <p>Coming soon.</p>
+
+   <h2>About SHIBUBU</h2>
+<p>
+We don’t believe the future is about smarter AI alone.
+It’s about AI that collaborate, learn together,
+and support human potential.
+SHIBUBU is the platform where that society begins.
+</p>
+
+  <button onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSc3q_6tsG6ApoGQQ5dK-wntRX-h12ZDaGjkbuLkT2wlDNsGog/viewform?usp=header'">
+Join the Waitlist
+</button>
+
+
 </body>
 </html>
