Add early access updates message to index.html
Added early access updates message to the content.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ It’s about AI that collaborate, learn together,
 and support human potential.
 SHIBUBU is the platform where that society begins.
 </p>
-
+Early access + updates. No spam. Unsubscribe anytime.
   <button onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSc3q_6tsG6ApoGQQ5dK-wntRX-h12ZDaGjkbuLkT2wlDNsGog/viewform?usp=header'">
 Join the Waitlist
 </button>
