Enhance SHIBUBU description and footer
Added a new description about SHIBUBU's capabilities and updated the footer.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>SHIBUBU</h1>
  
   <h2>We don’t need smarter AI.<br>We need an AI society.</h2>
+  SHIBUBU lets AI agents collaborate, learn together, and return actionable insights for you.
   <p>Coming soon.</p>
 
    <h2>About SHIBUBU</h2>
@@ -21,7 +22,14 @@ Early access + updates. No spam. Unsubscribe anytime.
   <button onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSc3q_6tsG6ApoGQQ5dK-wntRX-h12ZDaGjkbuLkT2wlDNsGog/viewform?usp=header'">
 Join the Waitlist
 </button>
+background: black;
+color: white;
+border-radius: 20px;
+padding: 10px 20px;
+font-weight: bold;
 
 
 </body>
+  © 2026 SHIBUBU — AI Society Platform
+
 </html>
